--- a/css/main.css
+++ b/css/main.css
@@ -7,15 +7,29 @@ body {
 
 .wrapper {
     display: flex;
+    min-width: 100%;
+    position: relative;
 }
 
 .header {
-    margin: 0 auto;
+    height: 100vh;
+    width: 100%;
+}
+
+.header__opening-bg {
+    background-color: #F2F2F2;
+    height: 69px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 
 .container {
-    width: 1240px;
+    max-width: 1240px;
     padding: 0 20px;
+    margin: 0 auto;
+    position: relative;
 }
 
 .header__opening {
@@ -46,15 +60,17 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 158px;
 }
 
 .logo {
+    transform: translateY(-15px);
 }
 
 .header__contacts {
     display: flex;
     column-gap: 65px;
-    
+    transform: translateY(-15px);    
 }
 
 .header__mail:hover {
@@ -80,9 +96,6 @@ body {
     justify-content: center;
 }
 
-
-.contacts__items {
-}
 .contacts__tittel {
     font-family: 'Mulish';
     font-weight: 400;
@@ -91,6 +104,7 @@ body {
     letter-spacing: 0.36px;
     color: #1C2752;
 }
+
 .contacts__item {
     font-size: 17px;
     line-height: 27px;
@@ -104,6 +118,10 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: #FFB342;
+    position: absolute;
+    width: 97.67%;
+    transform: translateY(-30px);
+    z-index: 2;
 }
 
 .nav__links {
@@ -116,7 +134,7 @@ body {
     font-size: 19px;
     line-height: 30px;
     letter-spacing: 0.36px;
-    color: #222222;
+    color: #222222;  
 }
 .nav__link.active a {
     color: white;
@@ -129,16 +147,81 @@ body {
     letter-spacing: 0.36px;
     color: #F4F4F4;
     background-color: #1C2752;
+    margin-right: 10px;
+}
+
+.nav__btn:hover {
+    cursor: pointer;
+    background-color: #2f3c6e;
+    transition: 0.2s;
 }
 
 .btn {
     padding: 19px 42px;
-    margin-right: 10px;
 }
 
 .header__content {
+    background-image: url(../img/header/header.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
 }
+
+.content__item{
+    padding-top: 260px;
+}
+
+.customer {
+    display: flex;
+    max-width: 662px;
+    padding-left: 20px;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.2);
+    margin-bottom: 31px;
+}
+
+.customer__text {
+    padding-left: 10px;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: 0.36px;
+    text-transform: capitalize;
+    color: #FFFFFF;
+}
+
+.header__tittel {
+    font-family: 'Mulish';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 60px;
+    line-height: 78px;
+    letter-spacing: 1.2px;
+    text-transform: capitalize;
+    color: #FFFFFF;
+    max-width: 720px;
+    padding-bottom: 29px;
+}
+
+.header__btn {
+    background-color: #FFB342;
+    font-size: 20px;    
+    line-height: 30px;
+    letter-spacing: 0.36px;
+    color: #1C2752;
+    display: inline-block;
+}
+
+.header__btn:hover {
+    cursor: pointer;
+    background-color: #f9c06b;
+}
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+/*main*/
+
 .main {
+    flex: 1 1 auto;;
 }
+
 .footer {
 }
