--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ body {
     justify-content: center;
 }
 
-.contacts__tittel {
+.contacts__titel {
     font-family: 'Mulish';
     font-weight: 400;
     font-size: 20px;
@@ -150,6 +150,7 @@ body {
     color: #F4F4F4;
     background-color: #1C2752;
     margin-right: 10px;
+    padding: 19px 42px;
 }
 
 .nav__btn:hover {
@@ -160,6 +161,12 @@ body {
 
 .btn {
     padding: 19px 42px;
+    background-color: #FFB342;
+    font-size: 20px;    
+    line-height: 30px;
+    letter-spacing: 0.36px;
+    color: #1C2752;
+    display: inline-block;
 }
 
 .header__content {
@@ -191,7 +198,7 @@ body {
     color: #FFFFFF;
 }
 
-.header__tittel {
+.header__titel {
     font-family: 'Mulish';
     font-style: normal;
     font-weight: 400;
@@ -204,16 +211,16 @@ body {
     padding-bottom: 29px;
 }
 
-.header__btn {
+/*.header__btn {
     background-color: #FFB342;
     font-size: 20px;    
     line-height: 30px;
     letter-spacing: 0.36px;
     color: #1C2752;
     display: inline-block;
-}
+}*/
 
-.header__btn:hover {
+.btn:hover {
     cursor: pointer;
     background-color: #f9c06b;
 }
@@ -228,7 +235,7 @@ body {
 /*Section Welcome*/
 
 .welcome {
-    padding-top: 140px;
+    padding: 140px 0 140px 0;
 }
 
 .welcome__row {
@@ -239,27 +246,36 @@ body {
 .welcome__img {
     height: 575px;
     height: 581px;
-    padding-bottom: 140px;
+
 }
 
 .welcome__content {
     padding: 11px 0;
 }
 
+.icon__block {
+    display: inline-block;
+}
+
 .icon__row {
     display: flex;
     align-items: center;
     column-gap: 10px;
+}
+
+.icon__row-gray {
     background-color: #F4F4F4;
-    max-width: 249px;
-    margin-bottom: 22px;
+}
+
+.icon__text {
+    padding-right: 20px;
 }
 
 .content__icon {
     padding-left: 20px;
 }
 
-.tittel h2 {
+.titel h2 {
     font-family: 'Mulish';
     font-style: normal;
     font-weight: 400;
@@ -269,8 +285,8 @@ body {
     color: #1C2752;
 }
 
-.conntent__tittel {
-    padding-bottom: 12px;
+.conntent__titel {
+    padding: 22px 0 12px 0;
 }
 
 .content__text p{
@@ -334,13 +350,314 @@ body {
     color: #7E7E7E;
 }
 
-li::before {
+.experience__item li::before {
     content: '-';
     padding-right: 5px;
 }
 
 /*--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
-/*Section */
+/*Section main-service*/
+
+.main-service {
+    position: relative;
+    
+}
+.main-service-orange {
+    background-color: #FFB342;
+}
+
+.main-service__block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 140px 0 470px 0;
+}
+
+
+.icon__row-white {
+    background-color: white;
+}
+
+.main-service__titel {
+    padding: 22px 0 12px 0;
+}
+
+.main-service__subtitel {
+    font-size: 18px;
+    line-height: 150%;
+    text-align: center;
+    letter-spacing: 0.36px;
+    color: #1C2752;
+    max-width: 832px;
+    padding-bottom: 38px;
+}
+
+.main-service__buttons {
+    display: flex;
+    column-gap: 30px;
+}
+
+.main-service__btn {
+    padding: 17px 41px;
+    border: 1px solid black;
+}
+
+.main-service__btn.active {
+    padding: 16px 41px;
+    background-color: white;
+    border: 1px solid #FFB342;
+}
+
+.main-service__btn:hover {
+    cursor: pointer;
+}
+
+.btn__item {
+    display: flex;
+    column-gap: 10px;
+    align-items: center;
+}
+
+.btn__text {
+    font-size: 20px;
+    line-height: 150%;
+    letter-spacing: 0.36px;
+    color: #222222;
+}
+
+.electric {
+    display: flex;
+    padding: 60px;
+    margin: 0 20px;
+    column-gap: 60px;
+    position: absolute;
+    background-color: white;
+    z-index: 2;
+    top: -431px;    
+}
+
+.electric__block {
+    max-width: 560px;
+}
+
+.icon__block {
+    padding-bottom: 22px;
+}
+
+.electric__titel {
+    padding-bottom: 12px;
+}
+
+.electric__subtitel p {
+    font-size: 18px;
+    line-height: 150%;
+    letter-spacing: 0.36px;
+    color: #7E7E7E;
+    padding-bottom: 10px;
+}
+
+.electric__btn {
+    margin-top: 20px;
+}
+
+.electric__img {
+    max-width: 416px;
+    max-height: 366px;
+}
+
+
+/*--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+/*Services*/
+
+.services {
+    background-color: #F4F4F4;
+}
+
+.services__block {
+    padding: 240px 0 140px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.services__titel {
+    padding-bottom: 12px;
+}
+
+.services__subtitle {
+    font-size: 18px;
+    line-height: 150%;
+    text-align: center;
+    letter-spacing: 0.36px;
+    color: #7E7E7E;
+    max-width: 815px;
+    padding-bottom: 50px;
+}
+
+.services__cards {
+    display: flex;
+    gap: 30px;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.services__card {
+    background-color: #1C2752;
+    padding: 50px 46px 50px 35px;
+    display: flex;
+    flex-direction: column;
+}
+
+.card__icon {
+    padding-bottom: 20px;
+}
+
+.card__titel {
+    font-family: 'Mulish';
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 150%;
+    letter-spacing: 0.36px;
+    text-transform: capitalize;
+    color: #FFB342;
+    padding-bottom: 15px;
+}
+
+.card__text {
+    max-width: 299px;
+    font-size: 18px;
+    line-height: 150%;
+    letter-spacing: 0.36px;
+    color: #D2D2D2;
+    padding-bottom: 22px;
+    flex: 1 1 100%;
+}
+
+.card__link {
+    ont-size: 18px;
+    line-height: 150%;
+    letter-spacing: 0.36px;
+    color: #FFFFFF;    
+}
+
+.card__link:hover{
+    cursor: pointer;
+    color: #D2D2D2;
+    transition: 0.2s;
+}
+
+/*--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+/*Reasons*/
+
+.reasons__block {
+    display: flex;
+    column-gap: 70px;
+    justify-content: center;
+}
+
+.reasons__img {
+    max-width: 720px;
+    max-height: 848px;
+    position: relative;
+}
+
+.reasons__statistic {
+    position: absolute;
+    top: 140px;
+    left: 80px;
+    padding: 100px 80px 124px 80px;
+    background-color: rgba(28, 39, 82, 0.86);
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.statistic__block {
+    display: flex;
+}
+
+.statistic__numbers {
+    width: 110px;
+    padding: 16px 0 16px 21px;
+    background-color: #FFB342;
+    font-family: 'Mulish';
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 146%;
+    letter-spacing: 0.36px;
+    color: #1C2752;
+    
+}
+
+.statistic__text {
+    font-family: 'Mulish';
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 140%;
+    letter-spacing: 0.36px;
+    color: #FFFFFF;
+    width: 290px;
+    padding: 16px 0 16px 20px;
+    border: 2px solid white;
+    border-left: none;
+}
+
+.reasons__content {
+    padding-top: 93px;
+    max-width: 575px;
+}
+
+.reasons__title {
+    padding-bottom: 11px;
+}
+
+.reasons__subtitel {
+    font-size: 17px;
+    line-height: 159%;
+    letter-spacing: 0.36px;
+    color: #7E7E7E;
+    padding-bottom: 37px;
+}
+
+.list__titel {
+    font-family: 'Mulish';
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 140%;
+    letter-spacing: 0.36px;
+    color: #1C2752;
+    padding-bottom: 8px;
+    display: flex;
+    align-items: center;
+}
+
+.list__titel::before {
+    content: '';
+    background-image: url('..//img/reasons/done.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 32px;
+    height: 32px;
+    background-color: #FFB342;
+    border-radius: 100%;
+    display: inline-block;
+    margin-right: 20px;
+    
+}
+
+.list__text {
+    font-size: 17px;
+    line-height: 159%;
+    letter-spacing: 0.36px;
+    color: #7E7E7E;
+    padding-bottom: 32px;
+    padding-left: 52px;
+}
+
+
 .footer {
 }
