--- a/css/main.css
+++ b/css/main.css
@@ -180,7 +180,7 @@ body {
     padding: 260px 0 220px 0;
 }
 
-.customer {
+.custom {
     display: flex;
     max-width: 662px;
     padding-left: 20px;
@@ -189,7 +189,7 @@ body {
     margin-bottom: 31px;
 }
 
-.customer__text {
+.custom__text {
     padding-left: 10px;
     font-size: 18px;
     line-height: 27px;
@@ -723,6 +723,218 @@ body {
     text-align: center;
     letter-spacing: 0.36px; 
     color: #7E7E7E;
+}
+
+/*--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+/*Clients*/
+
+.clients {
+    padding-top: 140px;
+}
+
+.clients__block {
+    display: flex;
+    column-gap: 45px;   
+}
+
+.cutomers__block {
+    flex: 0 0 50%;
+}
+
+
+.customers__titel {
+    padding-bottom: 40px;
+}
+
+.customers__says {
+    padding: 41px;
+    border: 1px solid #DCDCDC;
+    margin-bottom: 40px;
+}
+
+.customer__account {
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    position: relative;
+}
+
+.customer__account::after {
+    content: '';
+    background-image: url('../img/customers/quotes.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: ;
+    position: absolute;
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    background-color: #FFB342;
+    right: 0;
+    top:0;
+}
+
+.customer__foto {
+    padding-bottom: 21px;
+}
+
+.customer__name {
+    font-family: 'Mulish';
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 140%;
+    letter-spacing: 0.36px;
+    color: #1C2752;
+}
+
+.customer__city {
+    font-size: 18px;
+    line-height: 150%;
+    letter-spacing: 0.36px;
+    color: #7E7E7E;
+}
+
+.line {
+    display: inline-block;
+    width: 100%;
+    height: 2px;
+    background-color: #DCDCDC;
+    margin-bottom: 20px;
+}
+
+.customer__text {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 150%;
+    letter-spacing: 0.36px;
+    color: #7E7E7E;
+    padding-bottom: 23px;
+}
+
+.customer__buttons {
+    display: flex;
+    column-gap: 21px;
+}
+
+.customer__btn{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #F4F4F4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.customer__btn:hover{ 
+    cursor: pointer;
+    background-color: #dddbdb;
+    transition: 0.2s;
+}
+
+.customers__question {
+    padding: 50px 40px;
+    background-color: #FFB342;
+}
+
+
+.question__titel {
+    font-family: 'Mulish';
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 130%;
+    letter-spacing: 0.36px;
+    color: #1C2752;
+    padding-bottom: 13px;
+}
+
+.question__text {
+    font-size: 18px;
+    line-height: 150%;
+    letter-spacing: 0.36px;
+    color: #1C2752;
+    padding-bottom: 17px;
+}
+
+.question__call a{
+    font-family: 'Mulish';
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 150%;
+    letter-spacing: 0.36px;
+    color: #FFFFFF;
+    padding-left: 70px;
+}
+
+.question__call {
+    position: relative;   
+}
+
+.question__call::before {
+    content: '';
+    background-image: url('../img/customers/call.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: white;
+    position: absolute;  
+}
+
+.appointment__block {
+    padding-bottom: 90px;
+}
+.appointment__titel {
+    padding-bottom: 40px;
+}
+.appointment__form {
+    display: flex;
+    flex-direction: column;
+    padding: 70px 40px 75px 40px;
+    background-color: #F4F4F4;
+    gap: 25px;
+}
+
+.appointment::placeholder{
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 159%;
+    letter-spacing: 0.36px;
+    color: #1C2752;
+}
+
+.appointment{
+    padding: 19px 0 19px 44px;
+}
+
+.appointment__btn {
+    font-size: 17px;
+    line-height: 159%;
+    letter-spacing: 0.36px;
+    color: #1C2752;
+    padding: 20px 211px;
+    background-color: #FFB342;
+}
+
+.appointment__btn:hover{
+    background-color: #f9c06b;
+}
+
+.clients .icon__block{
+    display: flex;
+    justify-content: center;
+}
+
+.clients__titel {
+    text-align: center;
+    padding-bottom: 44px;
+}
+.clients__logo {
+    display: flex;
+    justify-content: space-around;   
+    padding-bottom: 140px; 
 }
 
 .footer {
